# tiny_os

./: Cargo.toml  Makefile
src/: lib.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm
