[package]
name = "tiny_os"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "George Slavin"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
volatile = "0.1.0"


# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
